Update code BE 05-12-2025